# BriefAlpha-Family-Office-Morning-Brief

./: .env.example  .gitignore  Makefile  README.md  package.json  pnpm-lock.yaml
apps/api/: README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260425_0001_initial.py  20260426_0002_review_overrides.py
apps/api/briefalpha_api/: __init__.py  auth.py  main.py  secrets_check.py  settings.py
apps/api/briefalpha_api/anonymization/: __init__.py  alias.py  map_storage.py  replace.py  reverse.py  sensitive_entity_dictionary.py
apps/api/briefalpha_api/audit/: __init__.py  source_health_aggregator.py  writer.py
apps/api/briefalpha_api/cache/: __init__.py  redis_client.py
apps/api/briefalpha_api/config/: live_preconditions.py  mode.py
apps/api/briefalpha_api/db/: __init__.py  models.py  session.py
apps/api/briefalpha_api/fixtures/: __init__.py  brief.py
apps/api/briefalpha_api/ingestion/: __init__.py  base.py  market.py  news.py  official.py  runner.py  symbol_map.py
apps/api/briefalpha_api/llm/: __init__.py  prompt_builder.py  providers.py  schema.py  sensitive_scan.py  wrapper.py
apps/api/briefalpha_api/pipeline/: __init__.py  artifact.py  run.py  schemas.py  stages.py
apps/api/briefalpha_api/portfolio/: __init__.py  bucket.py  display_names.py  models.py  repo.py  sector.py  universe.py
apps/api/briefalpha_api/qa/: __init__.py  demo_responses.py  service.py
apps/api/briefalpha_api/research/: __init__.py  persistence.py  queue_runner.py  storage.py  worker.py
apps/api/briefalpha_api/routers/: __init__.py  admin.py  analytics.py  brief.py  evidence.py  judgement.py  portfolio.py  qa.py  research.py  review.py  source_health.py
apps/api/briefalpha_api/scheduler/: __init__.py  jobs.py
apps/api/briefalpha_api/search/: __init__.py  fts.py
apps/api/briefalpha_api/validator/: __init__.py  citations.py  numbers.py  polarity.py  quote_span.py  runner.py  time_window.py
apps/api/tests/: conftest.py
apps/api/tests/integration/: test_admin_refresh.py  test_brief_pipeline.py  test_evidence_trail.py  (+10 more)
(+117 files in other folders)
